added feature snapshot